--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>我的第一个vue案例</title>
 	<!-- 假如引入的第三方库是需要依赖它的，必须放上面， 例如jq、vue库 -->
 	<script src="https://unpkg.com/vue"></script>
 	<script type="text/javascript" src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
